# RHoiScribe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release-builds.yml
docs/: README.ja.md  README.ru.md  README.zh-CN.md  client-setup.md
resources/knowledge/hoi4/: catalog.json  latest-update.md
resources/knowledge/hoi4/workflow/: agent_delivery_rules.toml
resources/skill/: SKILL.md
src/: cli.rs  lib.rs  main.rs  server.rs  skill.rs
src/cwt/: hoi4_config.rs  mod.rs  rules.rs  runtime.rs  service.rs  workspace.rs
src/prompts/: mod.rs
src/resources/: cwt.rs  cwt_bundle.rs  mod.rs
src/state/: legacy.rs  maintenance.rs  mod.rs  path.rs  scope.rs  store.rs
src/state/legacy/: artifacts.rs  reader.rs  recovery.rs  swap.rs
src/state/store/: records.rs  schema.rs  sql.rs
src/tools/: batch_generation_tests.rs  cwt_diagnostics.rs  environment.rs  error_log.rs  gui_gfx_asset.rs  mod.rs  paradox_lexer.rs  preferences.rs  project_effective_files.rs  project_files.rs  project_index.rs  project_index_scan.rs  project_repair.rs  project_repair_tests.rs  project_validation.rs  project_validation_tests.rs  rchadow_debug.rs  rnmdb_store.rs  script_edit.rs  state_maintenance.rs  test_support.rs  tool_logs.rs  unique_scan.rs
tests/: docs_content.rs  knowledge_catalog.rs  resource_catalog.rs  tool_engine.rs
